--- a/include/css/style.css
+++ b/include/css/style.css
@@ -4,12 +4,15 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-   
+    height: 500px;
+    margin-top: 10%;
 }
 h2 {
     font-weight: 700;
     font-size: 22px;
-    color: #566366;
+    color: #ffa100;
+    color: gold;
+    text-shadow: 1px 1px 2px black;
     margin: 0 0 20px 0;
 }
 h5 {
@@ -19,7 +22,6 @@ h5 {
 }
 .shadow {
     text-shadow: 1px 1px black;
-
 }
 .shadow>th {
     background: rgba(0, 0, 0, 0.5);
